image quality - compressed, padding change to Story- Vision

--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -1986,7 +1986,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
   .post-type-archive-story .one-house-container .meet-our-team-wrapper {
     text-align: center;
     background-color: yellow;
-    background: url("../../images/eagle-background.png") repeat top;
+    background: url("../../images/eagle-background-yellow.png") repeat top;
     background-size: contain; }
     .single-story .one-house-container .meet-our-team-wrapper .meet-our-team-title,
     .post-type-archive-story .one-house-container .meet-our-team-wrapper .meet-our-team-title {
@@ -2176,11 +2176,11 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
         display: none; } }
   .single-story .vision-container .entry-content ul,
   .post-type-archive-story .vision-container .entry-content ul {
-    padding: 0 7% 1.5rem; }
+    padding: 0 5% 1.5rem; }
     @media (min-width: 750px) {
       .single-story .vision-container .entry-content ul,
       .post-type-archive-story .vision-container .entry-content ul {
-        padding: 0 10% 1.5rem; } }
+        padding: 0 7.5% 1.5rem; } }
   @media (min-width: 750px) {
     .single-story .vision-container,
     .post-type-archive-story .vision-container {
@@ -2217,8 +2217,11 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
       padding: 2.5% 0 0 2.5%; } }
   .single-story .vision-featured-image,
   .post-type-archive-story .vision-featured-image {
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem; }
+    padding: 1.5rem 0; }
+    @media (min-width: 750px) {
+      .single-story .vision-featured-image,
+      .post-type-archive-story .vision-featured-image {
+        padding: 1.5rem 2.5%; } }
   .single-story .vision-image-two,
   .post-type-archive-story .vision-image-two {
     display: -webkit-box;
@@ -2230,7 +2233,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
     @media (min-width: 750px) {
       .single-story .vision-image-two,
       .post-type-archive-story .vision-image-two {
-        padding-bottom: 1.5rem; } }
+        padding: 0 2.5% 1.5rem 2.5%; } }
   .single-story .vision-wrapper-mobile,
   .post-type-archive-story .vision-wrapper-mobile {
     -ms-flex-preferred-size: 50%;
@@ -2246,8 +2249,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
     height: auto; }
     .single-story .vision-wrapper-mobile img,
     .post-type-archive-story .vision-wrapper-mobile img {
-      min-height: 10%;
-      padding: 0; }
+      min-height: 10%; }
 
 /* End of Vision */
 /*----- Heritage -----*/
