--- a/themes/csl/sass/_story.scss
+++ b/themes/csl/sass/_story.scss
@@ -92,7 +92,7 @@
     .meet-our-team-wrapper {
       text-align: center;
       background-color: yellow;
-      background: url("../../images/eagle-background.png") repeat top;
+      background: url("../../images/eagle-background-yellow.png") repeat top;
       background-size: contain;
       .meet-our-team-title {
         padding-top: $base__space-unit;
@@ -246,9 +246,9 @@
         }
       }
       ul {
-        padding: 0 7% $base__space-unit;
+        padding: 0 5% $base__space-unit;
         @include desktop {
-          padding: 0 10% $base__space-unit;
+          padding: 0 7.5% $base__space-unit;
         }
       }
     }
@@ -280,8 +280,10 @@
     }
   }
   .vision-featured-image {
-    padding-top: $base__space-unit;
-    padding-bottom: $base__space-unit;
+    padding: $base__space-unit 0;
+    @include desktop {
+      padding: $base__space-unit 2.5%;
+    }
   }
 
   .vision-image-two {
@@ -290,7 +292,7 @@
         height: 100%;
       }
     @include desktop {
-      padding-bottom: $base__space-unit;
+      padding: 0 2.5% $base__space-unit 2.5%;
     }
   }
   .vision-wrapper-mobile {
@@ -301,7 +303,6 @@
     height: auto;
     img {
       min-height: 10%;
-      padding: 0;
     }
   }
 }
