img absolute single event

--- a/themes/csl/sass/_single-event.scss
+++ b/themes/csl/sass/_single-event.scss
@@ -118,6 +118,7 @@
     img {
       height: 350px;
       width: auto;
+      position: absolute;
       max-width: none;
       position: absolute;
     }
