add image and img postioning

--- a/themes/csl/sass/_single-event.scss
+++ b/themes/csl/sass/_single-event.scss
@@ -120,6 +120,7 @@
       width: auto;
       max-width: none;
       position: absolute;
+      min-width: 100%;
     }
     @include desktop {
       img {
@@ -127,6 +128,7 @@
         width: auto;
         max-height: 100%;
         height: auto;
+        min-width: 0;
       }
     }
     
