--- a/themes/csl/sass/_story.scss
+++ b/themes/csl/sass/_story.scss
@@ -280,7 +280,7 @@
     }
   }
   .vision-featured-image {
-    padding: $base__space-unit 0;
+    padding: 0;
     @include desktop {
       padding: $base__space-unit 2.5%;
     }
