Pagination buttons to background image

--- a/themes/csl/sass/_gallery.scss
+++ b/themes/csl/sass/_gallery.scss
@@ -13,15 +13,9 @@
     width: 100%;
     position: relative;
     height: 100px;
-    img {
-      position: absolute;
-      right: 0;
-    }
-    img:first-of-type {
-      left: 0;
-    }
     
     a {
+      background-image: url(../../images/red-button.png);
       position: absolute;
       display: inline-flex;
       justify-content: center;
@@ -36,10 +30,7 @@
       color: $white;
     }
     @media screen and (max-width: 350px) {
-      img {
-        width: 127.5px;
-        height: 75px;
-      }
+      
       a {
         width: 127.5px;
         height: 75px;
