Change tile background color

--- a/themes/csl/sass/_gallery.scss
+++ b/themes/csl/sass/_gallery.scss
@@ -231,7 +231,7 @@
       }
       background-size: cover;
       background-position: center;
-      background-color: $red;
+      background-color: $teal;
       height: 220px;
       @include desktop {
         height: 400px;
