--- a/themes/csl/style.css
+++ b/themes/csl/style.css
@@ -3190,7 +3190,7 @@ div.wpcf7-response-output, div.wpcf7-validation-errors {
             flex: 0 0 100%;
     background-size: cover;
     background-position: center;
-    background-color: #D91F18;
+    background-color: #1DAFB8;
     height: 220px;
     margin-bottom: 2.5vw; }
     @media (min-width: 750px) {
