Margin on thumbnails

--- a/themes/csl/sass/_single-event.scss
+++ b/themes/csl/sass/_single-event.scss
@@ -184,7 +184,7 @@
         flex: 0 0 9vw;
         width: 9vw;
         height: 9vw;
-        margin: 0 0.5vw;
+        margin: 0.5vw 0.5vw 0;
       }
       img {
         width: 9vw;
@@ -196,7 +196,7 @@
           flex: 0 0 11vw;
           width: 11vw;
           height: 11vw;
-          margin: 0 .666vw;
+          margin: 0.666vw .666vw 0;
         }
         img {
           width: 11vw;
