--- a/themes/csl/sass/_story.scss
+++ b/themes/csl/sass/_story.scss
@@ -16,7 +16,7 @@
       .entry-title {
         color: $white;
         background-color: $black;
-        width: 30%;
+        display: inline-block;
       }
     }
     h1 {
@@ -27,7 +27,7 @@
   .alt-title {
     text-transform: none;
     font-weight: 500;
-    padding-left: $base__space-unit*0.75;
+    padding-left: $base__space-unit * 0.75;
     @include desktop {
       color: $white;
     }
@@ -39,7 +39,7 @@
     }
   }
 
-/*----- One-House -----*/
+  /*----- One-House -----*/
   .one-house-container {
     .entry-header {
       padding: 0;
@@ -52,7 +52,7 @@
     }
     .one-house-wrapper-desktop {
       @include desktop {
-        background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
+        background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4));
         padding: 2.5%;
         width: 70%;
       }
@@ -165,15 +165,15 @@
   }
   /* End of One-House */
 
-/*----- Origin -----*/
-  .origin-container {
+  /*----- movement -----*/
+  .movement-container {
     @include desktop {
       background-color: $teal;
       background: url("../../images/eagle-background-teal.png") no-repeat bottom;
       background-size: cover;
     }
   }
-  .origin-wrapper {
+  .movement-wrapper {
     display: flex;
     flex-flow: column nowrap;
     @include desktop {
@@ -181,7 +181,7 @@
       justify-content: space-between;
       color: $white;
     }
-    .origin-featured-image {
+    .movement-featured-image {
       width: 100%;
       height: auto;
       img {
@@ -203,7 +203,7 @@
         flex-basis: 50%;
       }
     }
-    .origin-image-two {
+    .movement-image-two {
       display: flex;
       img {
         min-width: 100%;
@@ -214,33 +214,33 @@
       }
     }
   }
-/* End of Origin */
+  /* End of movement */
 
-/*----- Vision -----*/
+  /*----- Vision -----*/
   .vision-container {
     .vision-wrapper-desktop {
       @include desktop {
         padding: 2.5% 0 2.5%;
       }
     }
-    .entry-header {
-      margin-left: 0;
-      @include desktop {
-        .entry-title {
-          width: 60%;
-        }
-      }
-    }
+    // .entry-header {
+    //   margin-left: 0;
+    //   @include desktop {
+    //     .entry-title {
+    //       width: 60%;
+    //     }
+    //   }
+    // }
     .entry-content {
       p {
         margin-top: 0;
         @include desktop {
-          padding: 2.5% 2.5% 0 2.5%;
+          padding: 2.5% 2.5% 0 5%;
         }
       }
       .teal-border {
         border-top: 3px solid $teal;
-        margin: 2rem 40% ;
+        margin: 2rem 40%;
         @include desktop {
           display: none;
         }
@@ -276,6 +276,12 @@
         display: initial;
         flex-basis: 100%;
         padding: 2.5% 0 0 2.5%;
+        &.entry-header {
+          padding: 5% 0 2.5%;
+          .entry-title {
+            padding: 0 5%;
+          }
+        }
       }
     }
   }
@@ -288,9 +294,9 @@
 
   .vision-image-two {
     display: flex;
-      img {
-        height: 100%;
-      }
+    img {
+      height: 100%;
+    }
     @include desktop {
       padding: 0 2.5% $base__space-unit 2.5%;
     }
@@ -308,65 +314,65 @@
 }
 /* End of Vision */
 
-/*----- Heritage -----*/
-  .heritage-container {
+/*----- acknowledgement -----*/
+.acknowledgement-container {
+  @include desktop {
+    background-color: $red;
+    background: url("../../images/orca-background.png") no-repeat center;
+    background-size: cover;
+  }
+  .acknowledgement-wrapper {
+    display: flex;
+    flex-flow: column nowrap;
     @include desktop {
-      background-color: $red;
-      background: url("../../images/orca-background.png") no-repeat center;
-      background-size: cover;
+      flex-flow: row wrap;
+      justify-content: space-between;
     }
-    .heritage-wrapper {
-      display: flex;
-      flex-flow: column nowrap;
-      @include desktop {
-        flex-flow: row wrap;
-        justify-content: space-between;
-      }
+  }
+  .acknowledgement-featured-image {
+    width: 100%;
+    height: auto;
+    img {
+      min-width: 100%;
+      min-height: 100%;
+      max-height: 75vh;
     }
-    .heritage-featured-image {
+    @include desktop {
+      order: 2;
+      flex-basis: 50%;
+      padding: 2.5%;
+      max-height: 50%;
+      margin-bottom: $base__space-unit;
+    }
+  }
+  .acknowledgement-image-two {
+    display: flex;
+    img {
+      min-width: 100%;
+      height: 100%;
+    }
+
+    @include desktop {
+      order: 3;
+      flex-basis: 50%;
+      display: inherit;
+      padding: 2.5%;
+      margin-bottom: $base__space-unit;
       width: 100%;
-      height: auto;
-      img {
-        min-width: 100%;
-        min-height: 100%;
-        max-height: 75vh;
-      }
-      @include desktop {
-        order: 2;
-        flex-basis: 50%;
-        padding: 2.5%;
-        max-height: 50%;
-        margin-bottom: $base__space-unit;
-      }
     }
-    .heritage-image-two {
-      display: flex;
-      img {
-        min-width: 100%;
-        height: 100%;
-      }
+  }
+  .entry-content {
+    @include desktop {
+      flex-basis: 100%;
+      margin: 0;
+      column-count: 2;
+      column-gap: $base__space-unit * 2;
+      color: $white;
 
-      @include desktop {
-        order: 3;
-        flex-basis: 50%;
-        display: inherit;
-        padding: 2.5%;
-        margin-bottom: $base__space-unit;
-        width: 100%;     
-      }
-    }
-    .entry-content {
-      @include desktop {
-        flex-basis: 100%;
-        margin: 0;
-        column-count: 2;
-        column-gap: $base__space-unit*2;
-        color: $white;
-
-        p {
-          margin-top: 0;
-        }
+      p {
+        margin-top: 0;
       }
     }
   }
-/* End of Heritage */
+}
+/* End of acknowledgement */
